--- a/ContactListView/Podfile
+++ b/ContactListView/Podfile
@@ -8,4 +8,8 @@ target 'ContactListView' do
   # Pods for ContactListView
 pod 'SDWebImage', '~> 5.0'
 
+pod 'SwiftyJSON', '~> 4.0'
+
+pod 'Alamofire', '~> 5.2'
+
 end
